welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:9: error: ')' expected but 'return' found.
	return sol;
        ^